feat: reowrk player domain sonarqube + getTeamusecase